--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/passport": "^7.5",
+        "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0",
+        "laravolt/avatar": "^3.0",
         "spatie/laravel-medialibrary": "^7.14",
         "spatie/laravel-permission": "^3.0"
     },
