--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^1.0",
         "laravolt/avatar": "^3.0",
         "spatie/laravel-medialibrary": "^7.14",
+        "spatie/laravel-newsletter": "^4.7",
         "spatie/laravel-permission": "^3.0"
     },
     "require-dev": {
