--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravolt/avatar": "^3.0",
         "spatie/laravel-medialibrary": "^7.14",
         "spatie/laravel-newsletter": "^4.7",
-        "spatie/laravel-permission": "^3.0"
+        "spatie/laravel-permission": "^3.0",
+        "spatie/laravel-tags": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
