--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-cors": "^0.11.4",
         "cviebrock/eloquent-sluggable": "^6.0",
         "fideloper/proxy": "^4.0",
+        "jwplayer/jwplatform": "^1.6",
         "laravel/framework": "^6.0",
         "laravel/passport": "^7.5",
         "laravel/socialite": "^4.2",
