--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "barryvdh/laravel-cors": "^0.11.4",
         "cviebrock/eloquent-sluggable": "^6.0",
+        "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "jwplayer/jwplatform": "^1.6",
         "laravel/framework": "^6.0",
